[gd_scene load_steps=3 format=2]

[ext_resource path="res://Anagrams/EmptyTextButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Anagrams.gd" type="Script" id=2]

[node name="Anagrams" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreaterVBox" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointContainer" type="MarginContainer" parent="CanvasLayer/Control/GreaterVBox"]
margin_top = 238.0
margin_right = 1024.0
margin_bottom = 252.0

[node name="PointLabel" type="Label" parent="CanvasLayer/Control/GreaterVBox/PointContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "600"
align = 1
valign = 1

[node name="SubmitCont" type="MarginContainer" parent="CanvasLayer/Control/GreaterVBox"]
margin_top = 262.0
margin_right = 1024.0
margin_bottom = 282.0

[node name="SubmitText" type="Button" parent="CanvasLayer/Control/GreaterVBox/SubmitCont"]
margin_left = 486.0
margin_right = 537.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "ENTER"

[node name="WordContainer" type="MarginContainer" parent="CanvasLayer/Control/GreaterVBox"]
margin_top = 292.0
margin_right = 1024.0
margin_bottom = 332.0

[node name="WordGrid" type="GridContainer" parent="CanvasLayer/Control/GreaterVBox/WordContainer"]
margin_left = 342.0
margin_right = 682.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_constants/hseparation = 10
columns = 7

[node name="FormedButton" parent="CanvasLayer/Control/GreaterVBox/WordContainer/WordGrid" instance=ExtResource( 1 )]

[node name="FormedButton2" parent="CanvasLayer/Control/GreaterVBox/WordContainer/WordGrid" instance=ExtResource( 1 )]
margin_left = 50.0
margin_right = 90.0

[node name="FormedButton3" parent="CanvasLayer/Control/GreaterVBox/WordContainer/WordGrid" instance=ExtResource( 1 )]
margin_left = 100.0
margin_right = 140.0

[node name="FormedButton4" parent="CanvasLayer/Control/GreaterVBox/WordContainer/WordGrid" instance=ExtResource( 1 )]
margin_left = 150.0
margin_right = 190.0

[node name="FormedButton5" parent="CanvasLayer/Control/GreaterVBox/WordContainer/WordGrid" instance=ExtResource( 1 )]
margin_left = 200.0
margin_right = 240.0

[node name="FormedButton6" parent="CanvasLayer/Control/GreaterVBox/WordContainer/WordGrid" instance=ExtResource( 1 )]
margin_left = 250.0
margin_right = 290.0

[node name="FormedButton7" parent="CanvasLayer/Control/GreaterVBox/WordContainer/WordGrid" instance=ExtResource( 1 )]
margin_left = 300.0
margin_right = 340.0

[node name="ButtonCont" type="MarginContainer" parent="CanvasLayer/Control/GreaterVBox"]
margin_left = 440.0
margin_top = 342.0
margin_right = 584.0
margin_bottom = 362.0
size_flags_horizontal = 6

[node name="ButtonGrid" type="GridContainer" parent="CanvasLayer/Control/GreaterVBox/ButtonCont"]
margin_right = 144.0
margin_bottom = 20.0
custom_constants/vseparation = 0
custom_constants/hseparation = 10
columns = 7

[node name="Button" type="Button" parent="CanvasLayer/Control/GreaterVBox/ButtonCont/ButtonGrid"]
margin_right = 12.0
margin_bottom = 20.0

[node name="Button2" type="Button" parent="CanvasLayer/Control/GreaterVBox/ButtonCont/ButtonGrid"]
margin_left = 22.0
margin_right = 34.0
margin_bottom = 20.0

[node name="Button3" type="Button" parent="CanvasLayer/Control/GreaterVBox/ButtonCont/ButtonGrid"]
margin_left = 44.0
margin_right = 56.0
margin_bottom = 20.0

[node name="Button4" type="Button" parent="CanvasLayer/Control/GreaterVBox/ButtonCont/ButtonGrid"]
margin_left = 66.0
margin_right = 78.0
margin_bottom = 20.0

[node name="Button5" type="Button" parent="CanvasLayer/Control/GreaterVBox/ButtonCont/ButtonGrid"]
margin_left = 88.0
margin_right = 100.0
margin_bottom = 20.0

[node name="Button6" type="Button" parent="CanvasLayer/Control/GreaterVBox/ButtonCont/ButtonGrid"]
margin_left = 110.0
margin_right = 122.0
margin_bottom = 20.0

[node name="Button7" type="Button" parent="CanvasLayer/Control/GreaterVBox/ButtonCont/ButtonGrid"]
margin_left = 132.0
margin_right = 144.0
margin_bottom = 20.0

[connection signal="pressed" from="CanvasLayer/Control/GreaterVBox/SubmitCont/SubmitText" to="." method="_on_Button_pressed"]
